integration-tests/tests/integration/snapshots/integration__archive_filter_all.snap
---
source: integration-tests/tests/integration/main.rs
expression: output.stderr_as_str()
---
   Archiving 20 binaries (including 4 non-test binaries), 2 build script output directories, 2 linked paths, and 1 standard library to <archive-file>
     Warning linked path `<target-dir>/debug/build/<cdylib-link-hash>/does-not-exist` not found, requested by: cdylib-link v0.1.0
             (this is a bug in this crate that should be fixed)
    Archived <file-count> files to <archive-file> in <duration>
