integration-tests/tests/integration/snapshots/integration__experimental_table_format_unknown_error.snap
---
source: integration-tests/tests/integration/main.rs
expression: "normalize_nextest_stderr(&output.stderr_as_str(), p.temp_root())"
---
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown experimental features defined: unknown-feature (known features: setup-scripts, wrapper-scripts, benchmarks):
